Fixed some vertical alignment issues.

--- a/index.css
+++ b/index.css
@@ -92,6 +92,8 @@ body {
 }
 
 #mark {
+	position: relative;
+	top: 20px;
 	width: 75%;
 	fill: #5A5783;
 	-ms-filter: drop-shadow(1px 1px #908CBB)
@@ -104,7 +106,7 @@ body {
 
 .header {
 	position: absolute;
-	top: -10%;
+	top: -20px;
 	width: 100%;
 }
 
@@ -177,7 +179,6 @@ input[type="submit"]:active {
 
 .social {
 	display: inline-block;
-	float: left;
 	list-style: none;
 	margin: 0;
 	padding: 0;
